# sixd

./: CMakeLists.txt  README.md  conanfile.py
apps/: test.cpp
include/: sixd.hpp
src/: sixd.cpp
